test/attribute/fail/mut_ref_self_argument.rs
struct Something;

impl Something {
    #[proc::attribute]
    fn test(&mut self) -> proc::TokenStream {
        todo!()
    }
}

fn main() {}
